--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <br/><br/><br/>
     </h5>
   </div>
+  <script src="src/lib/searchYouTube.js"></script>
   <script src="src/data/exampleVideoData.js"></script>
+  <script src="compiled/src/components/ChannelDetails.js"></script>
   <script src="compiled/src/components/VideoListEntry.js"></script>
   <script src="compiled/src/components/VideoDetails.js"></script>
   <script src="compiled/src/components/VideoList.js"></script>
