fixed import issues

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
   <script src="compiled/src/components/VideoPlayer.js"></script>
   <script src="compiled/src/components/Search.js"></script>
   <script src="compiled/src/components/App.js"></script>
-  <!-- <script src="compiled/src/index.js"></script> -->
-  <script src="src/client/public/bundle.js"></script>
+  <script src="compiled/src/index.js"></script>
 </body>
 </html>
